force-app/main/default/objects/Playlist__c/fields/Genre_s__c.field-meta.xml
<CustomField>
    <fullName>Genre_s__c</fullName>
    <label>Genre(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre_List</valueSetName>
    </valueSet>
</CustomField>