force-app/main/default/objects/Playlist__c/Playlist__c.field-meta.xml
<CustomField>
    <fullName>Playlist__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Playlist</label>
    <type>Text</type>
</CustomField>