force-app/main/default/objects/Playlist__c/recordTypes/Playlist_Unlocked.recordType-meta.xml
<RecordType>
    <fullName>Playlist_Unlocked</fullName>
    <active>true</active>
    <label>Playlist Unlocked</label>
</RecordType>