force-app/main/default/objects/Playlist__c/validationRules/Lock_playlist_genre_modification.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_playlist_genre_modification</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Genres__c )   &amp;&amp;  !ISBLANK(PRIORVALUE(Genres__c))</errorConditionFormula>
    <errorDisplayField>Genres__c</errorDisplayField>
    <errorMessage>Cannot update this field</errorMessage>
</ValidationRule>