force-app/main/default/objects/Playlist__c/validationRules/Lock_playlist_name_modification.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_playlist_name_modification</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>This cannot be modified</errorMessage>
</ValidationRule>